Add AWS SMS opt-in evidence page and legal policy remediation

--- a/privacy.html
+++ b/privacy.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Privacy | OzEHR</title>
-    <meta name="description" content="OzEHR privacy policy (placeholder)." />
+    <title>Privacy Policy | Oz Health</title>
+    <meta
+      name="description"
+      content="Oz Health Privacy Policy for platform, patient portal, and communication services."
+    />
 
-    <meta property="og:title" content="Privacy | OzEHR" />
-    <meta property="og:description" content="Privacy policy (placeholder)." />
+    <meta property="og:title" content="Privacy Policy | Oz Health" />
+    <meta
+      property="og:description"
+      content="Privacy Policy describing how Oz Health collects, uses, and safeguards information."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ozehr.com/privacy.html" />
+    <meta property="og:url" content="https://ozehr.com/privacy" />
     <meta property="og:image" content="assets/svg/og.svg" />
 
     <link rel="icon" href="assets/svg/favicon.svg" type="image/svg+xml" />
@@ -23,10 +29,10 @@
     <header class="nav">
       <div class="container">
         <div class="nav-inner">
-          <a class="logo" href="index.html" aria-label="OzEHR home">
+          <a class="logo" href="index.html" aria-label="Oz Health home">
             <span class="logo-mark" aria-hidden="true"></span>
             <span class="logo-name">
-              <strong>OzEHR</strong>
+              <strong>Oz Health</strong>
               <span>College health, upgraded</span>
             </span>
           </a>
@@ -76,33 +82,10 @@
     <main id="content">
       <section class="hero">
         <div class="container">
-          <div class="grid hero-grid">
-            <div class="reveal">
-              <span class="kicker"><span class="dot" aria-hidden="true"></span> Legal</span>
-              <h1 class="h1">Privacy policy (placeholder)</h1>
-              <p class="lead">Replace this page with your counsel-approved policy before production.</p>
-            </div>
-
-            <div class="reveal">
-              <div class="artboard artbox" aria-label="Security and privacy illustration">
-                <div class="art-badge"><span aria-hidden="true"></span> Privacy</div>
-                <div class="art-deco" aria-hidden="true">
-                  <div class="art-spark one float-b">
-                    <img src="assets/svg/oz-shield.svg" alt="" style="width:28px;height:28px" />
-                  </div>
-                  <div class="art-spark two float-a">
-                    <img src="assets/svg/oz-chat.svg" alt="" style="width:28px;height:28px" />
-                  </div>
-                </div>
-                <img
-                  class="art float-a"
-                  src="assets/img/generated/security-illustration.png"
-                  alt="Security illustration with HIPAA compliance and cloud hosting motif."
-                  loading="lazy"
-                  style="width:100%"
-                />
-              </div>
-            </div>
+          <div class="reveal">
+            <span class="kicker"><span class="dot" aria-hidden="true"></span> Legal</span>
+            <h1 class="h1">Privacy Policy</h1>
+            <p class="lead">Last updated: February 7, 2026</p>
           </div>
         </div>
       </section>
@@ -110,36 +93,116 @@
       <section class="section">
         <div class="container">
           <div class="panel reveal">
-            <h2 class="h2" style="margin-top:0">Summary</h2>
+            <h2 class="h2" style="margin-top:0">1. Introduction</h2>
             <p class="muted">
-              OzEHR is a healthcare software platform. This customer-facing site (ozehr.com) may collect limited information you provide,
-              such as contact details submitted via forms or email.
+              Oz Health ("we," "our," or "us") is committed to protecting the privacy and security of personal and health
+              information. This Privacy Policy describes how we collect, use, disclose, and safeguard information when you use
+              our electronic health record platform, patient portal, mobile application, and communication services
+              (collectively, the "Services").
             </p>
 
+            <h2 class="h2">2. HIPAA Compliance</h2>
+            <p class="muted">
+              Oz Health operates as a Business Associate under HIPAA and maintains administrative, technical, and physical
+              safeguards to protect PHI in accordance with HIPAA and the HITECH Act.
+            </p>
+
+            <h2 class="h2">3. Information We Collect</h2>
             <div class="list">
               <div class="item">
                 <div>
-                  <strong>Information we collect</strong>
-                  <p>Contact details (name, email), message content, and basic analytics data (if enabled).</p>
+                  <strong>Information provided by your healthcare provider</strong>
+                  <p>Name, date of birth, contact details, medical records, insurance/billing information, and appointment history.</p>
                 </div>
               </div>
               <div class="item">
                 <div>
-                  <strong>How we use it</strong>
-                  <p>To respond to inquiries, schedule demos, and improve the website experience.</p>
+                  <strong>Information you provide directly</strong>
+                  <p>Patient portal registration data, messages, communication preferences, and survey responses.</p>
                 </div>
               </div>
               <div class="item">
                 <div>
-                  <strong>Contact</strong>
-                  <p>Questions: <a href="mailto:contact@ozehr.com">contact@ozehr.com</a></p>
+                  <strong>Information collected automatically</strong>
+                  <p>Device and browser information, IP address, general location, usage data, and cookies/similar technologies.</p>
                 </div>
               </div>
             </div>
 
-            <div class="notice" style="margin-top:14px">
-              This is a placeholder document and not legal advice.
+            <h2 class="h2">4. How We Use Your Information</h2>
+            <p class="muted">
+              We use information for treatment, communications, operations, billing, security, fraud prevention, and legal
+              compliance.
+            </p>
+
+            <h2 class="h2">5. SMS and Email Communications</h2>
+            <p class="muted">
+              When you opt in to SMS or email communications, we may send healthcare-related transactional messages.
+            </p>
+            <div class="list">
+              <div class="item">
+                <div>
+                  <strong>Safeguards</strong>
+                  <p>Daily limits, quiet hours (default 9 PM to 8 AM), and cooldown periods to reduce excessive messaging.</p>
+                </div>
+              </div>
+              <div class="item">
+                <div>
+                  <strong>Opt-out methods</strong>
+                  <p>Reply STOP to SMS, update preferences in the portal, or contact your provider office.</p>
+                </div>
+              </div>
+              <div class="item">
+                <div>
+                  <strong>No marketing resale</strong>
+                  <p>We do not sell personal information or share phone/email data with third parties for marketing purposes.</p>
+                </div>
+              </div>
             </div>
+
+            <h2 class="h2">6. Information Sharing and Disclosure</h2>
+            <p class="muted">
+              We do not sell personal or health information. We disclose information only as needed for treatment/payment/
+              operations, to contracted service providers under confidentiality and BAA requirements, when required by law, or
+              with explicit authorization.
+            </p>
+
+            <h2 class="h2">7. Data Security</h2>
+            <p class="muted">
+              Security controls include encryption in transit and at rest, multi-factor authentication, role-based access,
+              audit logging, regular security testing, and automatic session timeouts.
+            </p>
+
+            <h2 class="h2">8. Data Retention</h2>
+            <p class="muted">
+              Health records are retained per applicable federal/state retention laws (typically 7-10 years from last encounter).
+              Communication logs are retained for operational needs and archived for compliance.
+            </p>
+
+            <h2 class="h2">9. Your Rights</h2>
+            <p class="muted">
+              Under HIPAA, you may have rights to access records, request corrections, request restrictions, receive an
+              accounting of disclosures, receive a copy of this policy, and file a complaint if rights were violated. California
+              residents may have additional rights under the CCPA.
+            </p>
+
+            <h2 class="h2">10. Children's Privacy</h2>
+            <p class="muted">
+              The patient portal is intended for users 18 and older. Minor patient information is handled through parents or
+              legal guardians via the provider office.
+            </p>
+
+            <h2 class="h2">11. Changes to This Policy</h2>
+            <p class="muted">
+              We may update this Privacy Policy from time to time. Material changes may be communicated by email or through the
+              Services. The date above reflects the latest revision.
+            </p>
+
+            <h2 class="h2">12. Contact Us</h2>
+            <p class="muted">
+              For privacy questions or requests, contact Oz Health at
+              <a href="mailto:privacy@ozhealth.com">privacy@ozhealth.com</a> or <a href="tel:+16467809236">(646) 780-9236</a>.
+            </p>
           </div>
         </div>
       </section>
@@ -149,16 +212,14 @@
       <div class="container">
         <div class="footer-grid">
           <div class="stack">
-            <a class="logo" href="index.html" aria-label="OzEHR home">
+            <a class="logo" href="index.html" aria-label="Oz Health home">
               <span class="logo-mark" aria-hidden="true"></span>
               <span class="logo-name">
-                <strong>OzEHR</strong>
+                <strong>Oz Health</strong>
                 <span>Modern EHR built for college health</span>
               </span>
             </a>
-            <small>
-              Contact: <a href="mailto:contact@ozehr.com">contact@ozehr.com</a>.
-            </small>
+            <small>Contact: <a href="mailto:contact@ozehr.com">contact@ozehr.com</a></small>
           </div>
 
           <div>
@@ -177,15 +238,15 @@
             <div class="stack">
               <a href="about.html">About</a>
               <a href="contact.html">Contact</a>
-              <a href="privacy.html" aria-current="page">Privacy</a>
-              <a href="terms.html">Terms</a>
+              <a href="privacy" aria-current="page">Privacy</a>
+              <a href="terms">Terms</a>
             </div>
           </div>
         </div>
 
         <div class="footer-bottom">
-          <small>Copyright <span id="year"></span> OzEHR. All rights reserved.</small>
-          <small>Phone (placeholder): <a href="tel:+18885550123">(888) 555-0123</a></small>
+          <small>Copyright <span id="year"></span> Oz Health. All rights reserved.</small>
+          <small>Phone: <a href="tel:+16467809236">(646) 780-9236</a></small>
         </div>
       </div>
 
