--- a/terms.html
+++ b/terms.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Terms | OzEHR</title>
-    <meta name="description" content="OzEHR terms of service (placeholder)." />
+    <title>Terms and Conditions | Oz Health</title>
+    <meta
+      name="description"
+      content="Oz Health Terms and Conditions for the platform, patient portal, and communication services."
+    />
 
-    <meta property="og:title" content="Terms | OzEHR" />
-    <meta property="og:description" content="Terms of service (placeholder)." />
+    <meta property="og:title" content="Terms and Conditions | Oz Health" />
+    <meta
+      property="og:description"
+      content="Terms and Conditions governing Oz Health services, including SMS communication terms."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ozehr.com/terms.html" />
+    <meta property="og:url" content="https://ozehr.com/terms" />
     <meta property="og:image" content="assets/svg/og.svg" />
 
     <link rel="icon" href="assets/svg/favicon.svg" type="image/svg+xml" />
@@ -23,10 +29,10 @@
     <header class="nav">
       <div class="container">
         <div class="nav-inner">
-          <a class="logo" href="index.html" aria-label="OzEHR home">
+          <a class="logo" href="index.html" aria-label="Oz Health home">
             <span class="logo-mark" aria-hidden="true"></span>
             <span class="logo-name">
-              <strong>OzEHR</strong>
+              <strong>Oz Health</strong>
               <span>College health, upgraded</span>
             </span>
           </a>
@@ -76,33 +82,10 @@
     <main id="content">
       <section class="hero">
         <div class="container">
-          <div class="grid hero-grid">
-            <div class="reveal">
-              <span class="kicker"><span class="dot" aria-hidden="true"></span> Legal</span>
-              <h1 class="h1">Terms of service (placeholder)</h1>
-              <p class="lead">Replace this page with your counsel-approved terms before production.</p>
-            </div>
-
-            <div class="reveal">
-              <div class="artboard artbox" aria-label="Security and compliance illustration">
-                <div class="art-badge"><span aria-hidden="true"></span> Trust</div>
-                <div class="art-deco" aria-hidden="true">
-                  <div class="art-spark one float-b">
-                    <img src="assets/svg/oz-shield.svg" alt="" style="width:28px;height:28px" />
-                  </div>
-                  <div class="art-spark two float-a">
-                    <img src="assets/svg/oz-pulse.svg" alt="" style="width:28px;height:28px" />
-                  </div>
-                </div>
-                <img
-                  class="art float-a"
-                  src="assets/img/generated/security-illustration.png"
-                  alt="Security illustration with HIPAA compliance and cloud hosting motif."
-                  loading="lazy"
-                  style="width:100%"
-                />
-              </div>
-            </div>
+          <div class="reveal">
+            <span class="kicker"><span class="dot" aria-hidden="true"></span> Legal</span>
+            <h1 class="h1">Terms and Conditions</h1>
+            <p class="lead">Last updated: February 7, 2026</p>
           </div>
         </div>
       </section>
@@ -110,36 +93,102 @@
       <section class="section">
         <div class="container">
           <div class="panel reveal">
-            <h2 class="h2" style="margin-top:0">Summary</h2>
+            <h2 class="h2" style="margin-top:0">1. Acceptance of Terms</h2>
             <p class="muted">
-              By using this website, you agree to standard terms, including acceptable use, intellectual property, and limitation of liability.
-              These terms are placeholders and must be replaced.
+              By accessing and using the Oz Health electronic health record platform and related services, including the patient
+              portal, mobile application, and communication services (collectively, the "Services"), you agree to be bound by
+              these Terms and Conditions. If you do not agree, do not use the Services.
             </p>
 
+            <h2 class="h2">2. Description of Services</h2>
+            <p class="muted">
+              Oz Health provides a cloud-based electronic health record platform for healthcare providers and their patients.
+              Services include appointment scheduling, clinical documentation, patient messaging, lab result delivery,
+              prescription management, billing, and SMS/email notifications.
+            </p>
+
+            <h2 class="h2">3. SMS and Email Communications</h2>
+            <p class="muted">
+              By providing your phone number and/or email address and opting in, you consent to receive transactional messages
+              from Oz Health, including appointment reminders and confirmations, lab result availability notifications,
+              care-related messages from your provider, and account/portal notifications.
+            </p>
             <div class="list">
               <div class="item">
                 <div>
-                  <strong>Acceptable use</strong>
-                  <p>Do not attempt to disrupt the site or access systems without authorization.</p>
+                  <strong>Message frequency</strong>
+                  <p>Message frequency varies based on appointment schedule and care activity, typically 1-5 messages per week.</p>
                 </div>
               </div>
               <div class="item">
                 <div>
-                  <strong>Trademarks</strong>
-                  <p>OzEHR and related marks are the property of their respective owners.</p>
+                  <strong>Rates</strong>
+                  <p>Message and data rates may apply. Carrier rates apply. Oz Health does not charge for SMS notifications.</p>
                 </div>
               </div>
               <div class="item">
                 <div>
-                  <strong>Contact</strong>
-                  <p>Questions: <a href="mailto:contact@ozehr.com">contact@ozehr.com</a></p>
+                  <strong>Opt-out and help</strong>
+                  <p>
+                    Reply STOP to opt out at any time. You may opt back in by replying START or updating preferences in the
+                    portal. Reply HELP for assistance, or email support@ozhealth.com.
+                  </p>
                 </div>
               </div>
             </div>
 
-            <div class="notice" style="margin-top:14px">
-              This is a placeholder document and not legal advice.
-            </div>
+            <h2 class="h2">4. User Accounts</h2>
+            <p class="muted">
+              You are responsible for maintaining the confidentiality of account credentials and for notifying your provider if
+              you suspect unauthorized access. Oz Health reserves the right to suspend accounts that violate these terms.
+            </p>
+
+            <h2 class="h2">5. Privacy and Data Protection</h2>
+            <p class="muted">
+              Your use of the Services is also governed by our <a href="privacy">Privacy Policy</a>. Oz Health follows HIPAA
+              requirements and applicable state privacy laws for the handling of PHI.
+            </p>
+
+            <h2 class="h2">6. Prohibited Uses</h2>
+            <p class="muted">
+              You agree not to use the Services for unlawful purposes, attempt unauthorized access, interfere with operation,
+              transmit malicious code, or impersonate another person or entity.
+            </p>
+
+            <h2 class="h2">7. Intellectual Property</h2>
+            <p class="muted">
+              The Services, including software, designs, text, graphics, and related content, are owned by Oz Health and
+              protected by intellectual property laws. Use is granted as a limited, non-exclusive, non-transferable license.
+            </p>
+
+            <h2 class="h2">8. Disclaimer of Warranties</h2>
+            <p class="muted">
+              The Services are provided "as is" without warranties of any kind. Oz Health does not provide medical advice; the
+              platform supports providers and patients and does not replace clinical judgment.
+            </p>
+
+            <h2 class="h2">9. Limitation of Liability</h2>
+            <p class="muted">
+              To the fullest extent permitted by law, Oz Health is not liable for indirect, incidental, special,
+              consequential, or punitive damages arising from use of the Services.
+            </p>
+
+            <h2 class="h2">10. Changes to Terms</h2>
+            <p class="muted">
+              Oz Health may modify these Terms at any time. Material changes may be communicated by email or through the
+              Services. Continued use after changes constitutes acceptance.
+            </p>
+
+            <h2 class="h2">11. Governing Law</h2>
+            <p class="muted">
+              These Terms are governed by the laws of the State of California, without regard to conflict of law principles.
+            </p>
+
+            <h2 class="h2">12. Contact</h2>
+            <p class="muted">
+              For questions regarding these Terms, contact Oz Health at
+              <a href="mailto:support@ozhealth.com">support@ozhealth.com</a> or <a href="tel:+16467809236">(646) 780-9236</a>.
+            </p>
           </div>
         </div>
       </section>
@@ -149,16 +198,14 @@
       <div class="container">
         <div class="footer-grid">
           <div class="stack">
-            <a class="logo" href="index.html" aria-label="OzEHR home">
+            <a class="logo" href="index.html" aria-label="Oz Health home">
               <span class="logo-mark" aria-hidden="true"></span>
               <span class="logo-name">
-                <strong>OzEHR</strong>
+                <strong>Oz Health</strong>
                 <span>Modern EHR built for college health</span>
               </span>
             </a>
-            <small>
-              Contact: <a href="mailto:contact@ozehr.com">contact@ozehr.com</a>.
-            </small>
+            <small>Contact: <a href="mailto:contact@ozehr.com">contact@ozehr.com</a></small>
           </div>
 
           <div>
@@ -177,15 +224,15 @@
             <div class="stack">
               <a href="about.html">About</a>
               <a href="contact.html">Contact</a>
-              <a href="privacy.html">Privacy</a>
-              <a href="terms.html" aria-current="page">Terms</a>
+              <a href="privacy">Privacy</a>
+              <a href="terms" aria-current="page">Terms</a>
             </div>
           </div>
         </div>
 
         <div class="footer-bottom">
-          <small>Copyright <span id="year"></span> OzEHR. All rights reserved.</small>
-          <small>Phone (placeholder): <a href="tel:+18885550123">(888) 555-0123</a></small>
+          <small>Copyright <span id="year"></span> Oz Health. All rights reserved.</small>
+          <small>Phone: <a href="tel:+16467809236">(646) 780-9236</a></small>
         </div>
       </div>
 
