Fix chart tabs and surveys API error

--- a/sampleoptin.html
+++ b/sampleoptin.html
@@ -108,7 +108,7 @@
                 <div class="art-badge"><span aria-hidden="true"></span> Opt-In</div>
                 <img
                   class="art"
-                  src="assets/svg/sms-opt-in-workflow.svg"
+                  src="assets/svg/sms-opt-in-workflow.svg?v=20260219c"
                   alt="Flowchart showing login, consent checkbox, confirmation SMS, and opt-out handling."
                   loading="lazy"
                   style="width:100%"
@@ -142,7 +142,7 @@
                   </div>
                   <div>
                     <strong>Terms and Conditions</strong>
-                    <p><a href="https://ozehr.com/terms" target="_blank" rel="noopener">https://ozehr.com/terms</a></p>
+                    <p><a href="https://ozehr.com/terms.html" target="_blank" rel="noopener">https://ozehr.com/terms</a></p>
                   </div>
                 </div>
               <div class="item">
@@ -151,7 +151,7 @@
                 </div>
                 <div>
                   <strong>Privacy Policy</strong>
-                  <p><a href="https://ozehr.com/privacy" target="_blank" rel="noopener">https://ozehr.com/privacy</a></p>
+                  <p><a href="https://ozehr.com/privacy.html" target="_blank" rel="noopener">https://ozehr.com/privacy</a></p>
                 </div>
               </div>
               <div class="item">
@@ -196,7 +196,7 @@
               </p>
               <img
                 class="art"
-                src="assets/svg/sms-opt-in-workflow.svg"
+                src="assets/svg/sms-opt-in-workflow.svg?v=20260219c"
                 alt="Oz Health SMS opt-in workflow with six steps from login to consent management."
                 loading="lazy"
               />
@@ -270,7 +270,7 @@
               </p>
               <img
                 class="art"
-                src="assets/svg/sms-opt-in-screen.svg"
+                src="assets/svg/sms-opt-in-screen.svg?v=20260219c"
                 alt="Registration screen with required SMS consent checkbox, terms link, and privacy link."
                 loading="lazy"
               />
@@ -285,7 +285,7 @@
                   </div>
                   <div>
                     <strong>Clear opt-in workflow image or public link</strong>
-                    <p>Provided: this page + embedded workflow image at <code>assets/svg/sms-opt-in-workflow.svg</code>.</p>
+                    <p>Provided: this page + embedded workflow image at <code>assets/svg/sms-opt-in-workflow.svg?v=20260219c</code>.</p>
                   </div>
                 </div>
                 <div class="item">
@@ -351,8 +351,8 @@
               <a href="about.html">About</a>
               <a href="contact.html">Contact</a>
               <a href="sampleoptin.html" aria-current="page">Sample Opt-In</a>
-              <a href="privacy">Privacy</a>
-              <a href="terms">Terms</a>
+              <a href="/privacy.html">Privacy</a>
+              <a href="/terms.html">Terms</a>
             </div>
           </div>
         </div>
