chore: security stack hardening and reference cleanup

--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
                 OzEHR focuses on clarity, modern interaction patterns, and practical campus workflows.
               </p>
               <div class="notice" style="margin-top:14px">
-                Competitive context: Medicat, Titanium, and Pointnclick are common in college health. OzEHR aims to deliver a cleaner experience with modern infrastructure.
+                OzEHR is purpose-built for college health: cleaner workflows, modern infrastructure, and a better experience for both clinicians and students.
               </div>
             </div>
           </div>
