--- a/contact.html
+++ b/contact.html
@@ -192,7 +192,7 @@
               <div class="callout" style="margin-top:14px">
                 <span class="kicker"><span class="dot" aria-hidden="true"></span> What to share</span>
                 <div class="list">
-                  <div class="item"><div><strong>Current EHR</strong><p>Medicat, Titanium, Pointnclick, or other.</p></div></div>
+                  <div class="item"><div><strong>Current EHR</strong><p>Your existing system or platform.</p></div></div>
                   <div class="item"><div><strong>Clinic size</strong><p>Locations, clinicians, and visit volume.</p></div></div>
                   <div class="item"><div><strong>Must-haves</strong><p>SSO, integrations, student portal, billing, etc.</p></div></div>
                 </div>
