--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <div class="hero-note">
                 <span class="pill">Made for college health workflows</span>
                 <span class="sep" aria-hidden="true">&bull;</span>
-                <span>Migrations from legacy systems (Medicat, Titanium, Pointnclick)</span>
+                <span>Migrations from legacy systems</span>
               </div>
 
               <div class="mini-stats">
@@ -609,7 +609,7 @@
               </p>
             </details>
             <details>
-              <summary>Can we migrate from Medicat, Titanium, or Pointnclick?</summary>
+              <summary>Can we migrate from our current system?</summary>
               <p>
                 We support structured migrations and can help you map data, clean it, and validate it before go-live.
                 The exact scope depends on your current system and exports.
