Refresh AWS SMS opt-in compliance evidence assets and copy

--- a/sampleoptin.html
+++ b/sampleoptin.html
@@ -99,7 +99,7 @@
               <div class="hero-note">
                 <span>Public link: <a href="https://ozehr.com/sampleoptin.html">https://ozehr.com/sampleoptin.html</a></span>
                 <span class="sep">•</span>
-                <span>Last updated: February 19, 2026</span>
+                <span>Last updated: February 26, 2026</span>
               </div>
             </div>
 
@@ -108,7 +108,7 @@
                 <div class="art-badge"><span aria-hidden="true"></span> Opt-In</div>
                 <img
                   class="art"
-                  src="assets/svg/sms-opt-in-workflow.svg?v=20260219c"
+                  src="assets/svg/sms-opt-in-workflow.svg?v=20260226a"
                   alt="Flowchart showing login, consent checkbox, confirmation SMS, and opt-out handling."
                   loading="lazy"
                   style="width:100%"
@@ -142,7 +142,7 @@
                   </div>
                   <div>
                     <strong>Terms and Conditions</strong>
-                    <p><a href="https://ozehr.com/terms.html" target="_blank" rel="noopener">https://ozehr.com/terms</a></p>
+                    <p><a href="https://ozehr.com/terms" target="_blank" rel="noopener">https://ozehr.com/terms</a></p>
                   </div>
                 </div>
               <div class="item">
@@ -151,7 +151,7 @@
                 </div>
                 <div>
                   <strong>Privacy Policy</strong>
-                  <p><a href="https://ozehr.com/privacy.html" target="_blank" rel="noopener">https://ozehr.com/privacy</a></p>
+                  <p><a href="https://ozehr.com/privacy" target="_blank" rel="noopener">https://ozehr.com/privacy</a></p>
                 </div>
               </div>
               <div class="item">
@@ -182,6 +182,17 @@
                 </div>
               </div>
             </div>
+            <div class="notice" style="margin-top:12px">
+              AWS upload file: <strong>use this exact image artifact</strong> -
+              <a href="https://ozehr.com/assets/img/sms-opt-in-proof-upload.jpg" target="_blank" rel="noopener">https://ozehr.com/assets/img/sms-opt-in-proof-upload.jpg</a>
+            </div>
+            <img
+              class="art"
+              src="assets/img/sms-opt-in-proof-upload.jpg?v=20260226a"
+              alt="Focused upload artifact showing explicit SMS consent language, frequency, rates, and STOP/HELP."
+              loading="lazy"
+              style="margin-top:12px"
+            />
           </div>
         </div>
       </section>
@@ -196,7 +207,7 @@
               </p>
               <img
                 class="art"
-                src="assets/svg/sms-opt-in-workflow.svg?v=20260219c"
+                src="assets/svg/sms-opt-in-workflow.svg?v=20260226a"
                 alt="Oz Health SMS opt-in workflow with six steps from login to consent management."
                 loading="lazy"
               />
@@ -211,9 +222,9 @@
                 Patients must check this consent box before account creation can be completed.
               </p>
               <div class="notice" style="margin-top:12px">
-                "I agree to receive SMS text messages from Oz Health for appointment reminders, lab results, and care alerts.
-                Message frequency: up to 5 msgs/week. Message and data rates may apply. Reply STOP to unsubscribe.
-                Reply HELP for help."
+                "By checking this box, I consent to receive SMS text messages from Oz Health for appointment reminders,
+                lab results, and care alerts. Message frequency: up to 5 msgs/week. Message and data rates may apply.
+                Reply STOP to unsubscribe. Reply HELP for help."
               </div>
 
               <div class="list">
@@ -249,10 +260,11 @@
               <div class="notice" style="margin-top:12px">
                 Exact registration description used for submission:
                 Patients register at app.ozehr.com and enter their mobile phone number. A required checkbox states:
-                "I agree to receive SMS text messages from Oz Health for appointment reminders, lab results, and care alerts.
-                Message frequency: up to 5 msgs/week. Message and data rates may apply. Reply STOP to unsubscribe.
-                Reply HELP for help." Patients must check the box to complete registration. A confirmation SMS is sent
-                immediately after opt-in. Terms: ozehr.com/terms. Privacy: ozehr.com/privacy.
+                "By checking this box, I consent to receive SMS text messages from Oz Health for appointment reminders,
+                lab results, and care alerts. Message frequency: up to 5 msgs/week. Message and data rates may apply.
+                Reply STOP to unsubscribe. Reply HELP for help." Patients must check the box to complete registration.
+                A confirmation SMS is sent immediately after opt-in. Terms: https://ozehr.com/terms.
+                Privacy: https://ozehr.com/privacy.
               </div>
             </div>
           </div>
@@ -270,7 +282,7 @@
               </p>
               <img
                 class="art"
-                src="assets/svg/sms-opt-in-screen.svg?v=20260219c"
+                src="assets/svg/sms-opt-in-screen.svg?v=20260226a"
                 alt="Registration screen with required SMS consent checkbox, terms link, and privacy link."
                 loading="lazy"
               />
@@ -285,7 +297,7 @@
                   </div>
                   <div>
                     <strong>Clear opt-in workflow image or public link</strong>
-                    <p>Provided: this page + embedded workflow image at <code>assets/svg/sms-opt-in-workflow.svg?v=20260219c</code>.</p>
+                    <p>Provided: this page + embedded workflow image at <code>assets/svg/sms-opt-in-workflow.svg?v=20260226a</code>.</p>
                   </div>
                 </div>
                 <div class="item">
