Update SMS opt-in evidence to optional web-form consent language

--- a/privacy.html
+++ b/privacy.html
@@ -85,7 +85,7 @@
           <div class="reveal">
             <span class="kicker"><span class="dot" aria-hidden="true"></span> Legal</span>
             <h1 class="h1">Privacy Policy</h1>
-            <p class="lead">Last updated: February 7, 2026</p>
+            <p class="lead">Last updated: February 27, 2026</p>
           </div>
         </div>
       </section>
@@ -155,7 +155,7 @@
               <div class="item">
                 <div>
                   <strong>No marketing resale</strong>
-                  <p>We do not sell personal information or share phone/email data with third parties for marketing purposes.</p>
+                  <p>We do not sell personal information or share phone/email data with third parties for marketing purposes. Mobile information and SMS opt-in data will not be shared with or sold to third parties or affiliates for marketing or promotional purposes.</p>
                 </div>
               </div>
             </div>
