--- a/sampleoptin.html
+++ b/sampleoptin.html
@@ -99,7 +99,7 @@
               <div class="hero-note">
                 <span>Public link: <a href="https://ozehr.com/sampleoptin.html">https://ozehr.com/sampleoptin.html</a></span>
                 <span class="sep">•</span>
-                <span>Last updated: February 26, 2026</span>
+                <span>Last updated: February 27, 2026</span>
               </div>
             </div>
 
@@ -108,7 +108,7 @@
                 <div class="art-badge"><span aria-hidden="true"></span> Opt-In</div>
                 <img
                   class="art"
-                  src="assets/svg/sms-opt-in-workflow.svg?v=20260226a"
+                  src="assets/svg/sms-opt-in-workflow.svg?v=20260227a"
                   alt="Flowchart showing login, consent checkbox, confirmation SMS, and opt-out handling."
                   loading="lazy"
                   style="width:100%"
@@ -188,7 +188,7 @@
             </div>
             <img
               class="art"
-              src="assets/img/sms-opt-in-proof-upload.jpg?v=20260226a"
+              src="assets/img/sms-opt-in-proof-upload.jpg?v=20260227a"
               alt="Focused upload artifact showing explicit SMS consent language, frequency, rates, and STOP/HELP."
               loading="lazy"
               style="margin-top:12px"
@@ -207,23 +207,23 @@
               </p>
               <img
                 class="art"
-                src="assets/svg/sms-opt-in-workflow.svg?v=20260226a"
+                src="assets/svg/sms-opt-in-workflow.svg?v=20260227a"
                 alt="Oz Health SMS opt-in workflow with six steps from login to consent management."
                 loading="lazy"
               />
               <div class="notice" style="margin-top:12px">
-                Opt-in type: <strong>Text / Web form checkbox consent</strong>. Opt-in occurs during authenticated patient registration.
+                Opt-in type: <strong>Web form (unchecked checkbox consent)</strong>. Opt-in occurs during authenticated patient registration.
               </div>
             </div>
 
             <div class="panel reveal">
               <h2 class="h2" style="margin-top:0">Consent language captured at opt-in</h2>
               <p class="muted">
-                Patients must check this consent box before account creation can be completed.
+                Users may opt in via an unchecked checkbox during registration.
               </p>
               <div class="notice" style="margin-top:12px">
-                "By checking this box, I consent to receive SMS text messages from Oz Health for appointment reminders,
-                lab results, and care alerts. Message frequency: up to 5 msgs/week. Message and data rates may apply.
+                "I agree to receive SMS text messages from Oz Health for appointment reminders, lab result notifications,
+                and care alerts. Message frequency: up to 5 messages per week. Message and data rates may apply.
                 Reply STOP to unsubscribe. Reply HELP for help."
               </div>
 
@@ -233,8 +233,8 @@
                     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
                   </div>
                   <div>
-                    <strong>Required action</strong>
-                    <p>Submit is blocked until the checkbox is selected.</p>
+                    <strong>Optional action</strong>
+                    <p>Account creation can continue even when the SMS checkbox is not selected (consent not required).</p>
                   </div>
                 </div>
                 <div class="item">
@@ -258,13 +258,13 @@
               </div>
 
               <div class="notice" style="margin-top:12px">
-                Exact registration description used for submission:
-                Patients register at app.ozehr.com and enter their mobile phone number. A required checkbox states:
-                "By checking this box, I consent to receive SMS text messages from Oz Health for appointment reminders,
-                lab results, and care alerts. Message frequency: up to 5 msgs/week. Message and data rates may apply.
-                Reply STOP to unsubscribe. Reply HELP for help." Patients must check the box to complete registration.
-                A confirmation SMS is sent immediately after opt-in. Terms: https://ozehr.com/terms.
-                Privacy: https://ozehr.com/privacy.
+                Opt-in workflow description for AWS registration update:
+                Users register at https://app.ozehr.com and may opt in via an unchecked checkbox:
+                "I agree to receive SMS text messages from Oz Health for appointment reminders, lab result notifications,
+                and care alerts. Message frequency: up to 5 messages per week. Message and data rates may apply.
+                Reply STOP to unsubscribe. Reply HELP for help." Consent is not required. Confirmation SMS sent.
+                Terms https://ozehr.com/terms Privacy
+                https://ozehr.com/privacy Evidence https://ozehr.com/sampleoptin.html
               </div>
             </div>
           </div>
@@ -282,8 +282,8 @@
               </p>
               <img
                 class="art"
-                src="assets/svg/sms-opt-in-screen.svg?v=20260226a"
-                alt="Registration screen with required SMS consent checkbox, terms link, and privacy link."
+                src="assets/svg/sms-opt-in-screen.svg?v=20260227a"
+                alt="Registration screen with optional SMS consent checkbox, terms link, and privacy link."
                 loading="lazy"
               />
             </div>
@@ -297,7 +297,7 @@
                   </div>
                   <div>
                     <strong>Clear opt-in workflow image or public link</strong>
-                    <p>Provided: this page + embedded workflow image at <code>assets/svg/sms-opt-in-workflow.svg?v=20260226a</code>.</p>
+                    <p>Provided: this page + embedded workflow image at <code>assets/svg/sms-opt-in-workflow.svg?v=20260227a</code>.</p>
                   </div>
                 </div>
                 <div class="item">
