--- a/features.html
+++ b/features.html
@@ -492,7 +492,7 @@
 
         <div class="footer-bottom">
           <small>Copyright <span id="year"></span> OzEHR. All rights reserved.</small>
-          <small>Phone (placeholder): <a href="tel:+18885550123">(888) 555-0123</a></small>
+          <small>Phone: <a href="tel:+16462045726">(646) 204 5726</a></small>
         </div>
       </div>
 
